# NetDiag-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  PRODUCT.md  README.md  app.py  pyproject.toml  start_app.bat
docs/: github_upload_checklist.md  resume.md
docs/knowledge/: captive-portal-auth.md  dns-troubleshooting.md  gaming-latency.md  intermittent-congestion.md  packet-loss-jitter.md  proxy-vpn-routing.md  single-site-vs-local-network.md  traceroute-analysis.md  wifi-access-link.md  windows-network-fixes.md
src/campusnet_agent/: agent.py  cli.py  diagnosis.py  llm.py  models.py  monitor.py  planner.py  probe.py  report.py
src/netdiag_agent/: __init__.py  agent.py  cli.py  diagnosis.py  graph.py  llm.py  memory.py  models.py  monitor.py  planner.py  probe.py  rag.py  react.py  report.py
tests/: test_diagnosis.py  test_diagnosis_dns.py  test_graph.py  test_memory.py  test_probe.py  test_rag.py
