[project]
name = "campusnet-agent"
version = "0.1.0"
description = "Campus network latency diagnosis and reporting assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
campusnet-agent = "campusnet_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campusnet_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
